# swagger-doc.json
@@ -12,6 +12,14 @@
             "schema": {
               "type": "number"
             }
+          },
+          {
+            "name": "search",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
